<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/OutsideLayout">

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/createProjectActivity_projectNameEditText"
			style="@style/EditTextStyle.Restrictive"
			android:hint="@string/hint_projectName"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/createProjectActivity_projectDescriptionEditText"
			style="@style/EditTextStyle.Restrictive.Description"
			android:hint="@string/hint_projectDescription"/>

	</android.support.design.widget.TextInputLayout>

	<LinearLayout
		style="@style/BottomLayout">

		<Button
			android:id="@+id/createProjectActivity_createProjectButton"
			style="@style/ButtonStyle.Sized"
			android:enabled="false"
			android:text="@string/button_createProject"/>

	</LinearLayout>

</LinearLayout>