<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/OutsideLayout">

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/createTaskActivity_taskNameEditText"
			style="@style/EditTextStyle.Restrictive"
			android:hint="@string/hint_taskName"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/createTaskActivity_taskDescriptionEditText"
			style="@style/EditTextStyle.Restrictive.Description"
			android:hint="@string/hint_taskDescription"/>

	</android.support.design.widget.TextInputLayout>

	<TableLayout
		style="@style/TableStyle"
		android:layout_marginEnd="@dimen/editTextMargin"
		android:layout_marginStart="@dimen/editTextMargin"
		android:layout_marginTop="@dimen/editTextMargin"
		android:paddingEnd="5dp"
		android:paddingStart="5dp"
		android:stretchColumns="1">

		<TableRow
			android:id="@+id/createTaskActivity_projectSpinnerRow"
			style="@style/TableStyle.Row"
			android:paddingBottom="10dp"
			android:visibility="invisible">

			<TextView
				style="@style/TextStyle"
				android:layout_column="0"
				android:text="@string/hint_projectSpinner"/>

			<android.support.v7.widget.AppCompatSpinner
				android:id="@+id/createTaskActivity_projectSpinner"
				style="@style/SpinnerStyle"/>

		</TableRow>

		<TableRow
			style="@style/TableStyle.Row"
			android:paddingBottom="10dp">

			<TextView
				style="@style/TextStyle"
				android:layout_column="0"
				android:text="@string/hint_assigneeSpinner"/>

			<android.support.v7.widget.AppCompatSpinner
				android:id="@+id/createTaskActivity_assigneeSpinner"
				style="@style/SpinnerStyle"/>

		</TableRow>

	</TableLayout>

	<LinearLayout
		style="@style/BottomLayout">

		<Button
			android:id="@+id/createTaskActivity_createTaskButton"
			style="@style/ButtonStyle.Sized"
			android:enabled="false"
			android:text="@string/button_createTask"/>

	</LinearLayout>

</LinearLayout>